@@ -6,30 +6,32 @@ import com.poly.room.management.domain.dto.request.UpdateRoomTypeRequest;
 import com.poly.room.management.domain.dto.response.RoomTypeResponse;
 import com.poly.room.management.domain.entity.RoomType;
 import com.poly.room.management.domain.entity.FurnitureRequirement;
+import com.poly.room.management.domain.port.out.repository.FurnitureRepository;
+import com.poly.room.management.domain.port.out.repository.RoomTypeRepository;
 import com.poly.room.management.domain.valueobject.RoomTypeId;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.math.BigDecimal;
 import java.util.stream.Collectors;
 
 @Component
+@RequiredArgsConstructor
 public class RoomTypeDtoMapper {
-    private final FurnitureDtoMapper furnitureMapper;
-
-    public RoomTypeDtoMapper(FurnitureDtoMapper furnitureMapper) {
-        this.furnitureMapper = furnitureMapper;
-    }
+    private final FurnitureRequirementDtoMapper furnitureRequirementDtoMapper;
 
     public RoomType toCreateEntity(CreateRoomTypeRequest request) {
         return RoomType.Builder.builder()
                 .typeName(request.getTypeName())
                 .description(request.getDescription())
-                .basePrice(new Money(new BigDecimal(request.getBasePrice())))
+                .basePrice(new Money(
+                        new BigDecimal(request.getBasePrice())))
                 .maxOccupancy(request.getMaxOccupancy())
-                .furnitures(request.getFurnitureRequirements()
+                .furnitures(request
+                        .getFurnitureRequirements()
                         .stream()
-                        .map(r ->
-                                new FurnitureRequirement(furnitureMapper.toEntity(r.getFurnitureId()), r.getQuantity())).toList())
+                        .map(furnitureRequirementDtoMapper::toEntity)
+                        .toList())
                 .build();
     }
 
@@ -40,9 +42,11 @@ public class RoomTypeDtoMapper {
                 .description(request.getDescription())
                 .basePrice(new Money(new BigDecimal(request.getBasePrice())))
                 .maxOccupancy(request.getMaxOccupancy())
-                .furnitures(request.getFurnitureRequirements().stream()
-                        .map(furnitureMapper::toEntity)
-                        .collect(Collectors.toList()))
+                .furnitures(request.getFurnitureRequirements()
+                        .stream()
+                        .map(furnitureRequirementDtoMapper::toEntity)
+                        .collect(Collectors
+                                .toList()))
                 .build();
     }
 
@@ -53,9 +57,11 @@ public class RoomTypeDtoMapper {
                 .description(roomType.getDescription())
                 .basePrice(roomType.getBasePrice().getAmount().toString())
                 .maxOccupancy(roomType.getMaxOccupancy())
-                .furnitureRequirements(roomType.getFurnitures().stream()
-                        .map(furnitureMapper::toResponse)
-                        .collect(Collectors.toList()))
+                .furnitureRequirements(roomType.getFurnitures()
+                        .stream()
+                        .map(furnitureRequirementDtoMapper::toResponse)
+                        .collect(Collectors
+                                .toList()))
                 .build();
     }
 }
